BUG 8260: Spinner not showing for DataSlate * On entering edit mode, and on saving * Components now set up spinner on body; so just use that * Also had to bump up z-index of spinner so it would show over the editor
QA: Make sure a spinner shows up when entering edit mode for a Slate
page on canvas.test, and also when saving changes to a page.

To-be-

--- a/app/styles/controls.sass
+++ b/app/styles/controls.sass
@@ -270,7 +270,7 @@ ul.wizardButtons
   position: absolute
   top: 50%
   width: 48px
-  z-index: 100
+  z-index: 10000
 
   &.minimal
     @include throbber-icon
@@ -292,7 +292,7 @@ ul.wizardButtons
   position: absolute
   top: 50%
   width: 48px
-  z-index: 100
+  z-index: 10000
 
   .loadingSpinner
     margin: 0
@@ -319,7 +319,7 @@ ul.wizardButtons
   position: absolute
   top: 0
   width: 100%
-  z-index: 60
+  z-index: 6000
 
 
 //*** START: colorpicker styles ***//
